Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43030

QHttpThreadDelegate : QHttpThreadDelegate don't read Response data about synchronous 401 reply.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.4.0 Beta
    • None
    • I683d4b6b40f600793d2545811dcd6644515de79c

      The App might use response data of synchronous 401 reply. (example : error info of code, string as json)
      But QHttpThreadDelegate don't read it.

      I checked Async is already OK. and other browsers(Chrome, Opera, FireFox) read the response data of both sync and async 401 reply.

        For Gerrit Dashboard: QTBUG-43030
        # Subject Branch Project Status CR V

            jm86.kim Jeongmin Kim
            jm86.kim Jeongmin Kim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes