src/network/access/qhttpthreaddelegate.cpp
@@ -2519,6 +2519,13 @@ name|incomingErrorDetail
 operator|=
 name|detail
 expr_stmt|;
+name|synchronousDownloadData
+operator|=
+name|httpReply
+operator|->
+name|readAll
+argument_list|()
+expr_stmt|;
 name|QMetaObject
 operator|::
 name|invokeMethod
